Fixing stretched image issue on home page.

--- a/assets/scss/elements/_stacked-images.scss
+++ b/assets/scss/elements/_stacked-images.scss
@@ -127,7 +127,7 @@ $zLayer: 10, 9, 8, 7, 6, 5, 4, 3, 2, 1;
   .slyder-container {
     height: 287px;
     .slyde {
-      min-width: 115%;
+      min-width: 120%;
 
     }
   }
